<?xml version="1.0"?>
<package>
  <name>slalom</name>
  <version>0.0.1</version>
  <description>Slalom Planner</description>

  <maintainer email="TAS09@todo.de">TAS09</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


</package>
