<?xml version="1.0"?>
<package>
  <name>pathfinder</name>
  <version>0.0.1</version>
  <description>Pathfinder</description>

  <maintainer email="jeversmann@todo.todo">jeversmann</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>rospy</run_depend>

</package>
